--- a/src/common/scss/base.scss
+++ b/src/common/scss/base.scss
@@ -1,1 +1,21 @@
 @import "./variable.scss";
+
+[class*="tt-hairline"]:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 200%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  pointer-events: none;
+  box-sizing: border-box;
+  border: 0 solid #e4e4e4;
+}
+
+.tt-hairline--bottom:after {
+  border-bottom-width: 1px;
+}
