--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -121,7 +121,7 @@ html {
 
 body {
   -webkit-text-size-adjust: none;
-  -webkit-tap-highlight-color: #fff;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   line-height: 1;
   width: 100%;
   color: #222;
